server/jolc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimirSimple PTCOMA
Rule 5     instruccion -> imprimirCompuesto PTCOMA
Rule 6     instruccion -> asignacionVars PTCOMA
Rule 7     instruccion -> asignacionLista PTCOMA
Rule 8     instruccion -> add_valores PTCOMA
Rule 9     instruccion -> delete_valores PTCOMA
Rule 10    instruccion -> modificar_lista PTCOMA
Rule 11    instruccion -> if_instruccion REND PTCOMA
Rule 12    instruccion -> while_instruccion REND PTCOMA
Rule 13    instruccion -> for_instruccion REND PTCOMA
Rule 14    instruccion -> break_instruccion PTCOMA
Rule 15    instruccion -> continue_instruccion PTCOMA
Rule 16    instruccion -> retorno_instruccion PTCOMA
Rule 17    instruccion -> def_funcion REND PTCOMA
Rule 18    instruccion -> llamada_funcion PTCOMA
Rule 19    instruccion -> def_global_var PTCOMA
Rule 20    instruccion -> decla_structN REND PTCOMA
Rule 21    instruccion -> modificar_struct PTCOMA
Rule 22    instruccion -> error PTCOMA
Rule 23    imprimirSimple -> RIMPRIMIR PARIZQ lista_expresion PARDER
Rule 24    imprimirCompuesto -> RIMPRIMIRLN PARIZQ lista_expresion PARDER
Rule 25    asignacionVars -> ID IGUAL expresion DOSPTS DOSPTS TIPOVAL
Rule 26    asignacionVars -> ID IGUAL expresion
Rule 27    TIPOVAL -> TIPENTERO
Rule 28    TIPOVAL -> TIPDECIMAL
Rule 29    TIPOVAL -> TIPNULL
Rule 30    TIPOVAL -> TIPBOOL
Rule 31    TIPOVAL -> TIPCHAR
Rule 32    TIPOVAL -> TIPSTRING
Rule 33    TIPOVAL -> ID
Rule 34    asignacionLista -> ID IGUAL CORIZQ lista_expresion CORDER
Rule 35    add_valores -> RPUSH EXCLA PARIZQ ID COMA expresion PARDER
Rule 36    add_valores -> RPUSH EXCLA PARIZQ ID CORIZQ expresion CORDER COMA expresion PARDER
Rule 37    delete_valores -> RPOP EXCLA PARIZQ ID PARDER
Rule 38    modificar_lista -> ID conj_acceso IGUAL expresion
Rule 39    def_global_var -> RGLOBAL ID
Rule 40    def_global_var -> RGLOBAL ID IGUAL expresion
Rule 41    if_instruccion -> RIF expresion instrucciones
Rule 42    if_instruccion -> RIF expresion instrucciones RELSEIF if_instruccion
Rule 43    if_instruccion -> RIF expresion instrucciones RELSE instrucciones
Rule 44    if_instruccion -> expresion instrucciones
Rule 45    if_instruccion -> expresion instrucciones RELSEIF if_instruccion
Rule 46    if_instruccion -> expresion instrucciones RELSE instrucciones
Rule 47    while_instruccion -> RWHILE expresion instrucciones
Rule 48    for_instruccion -> RFOR ID RIN expresion instrucciones
Rule 49    for_instruccion -> RFOR ID RIN expresion DOSPTS expresion instrucciones
Rule 50    break_instruccion -> RBREAK
Rule 51    continue_instruccion -> RCONTINUE
Rule 52    def_funcion -> RFUNCTION ID PARIZQ lista_params PARDER instrucciones
Rule 53    def_funcion -> RFUNCTION ID PARIZQ PARDER instrucciones
Rule 54    lista_params -> lista_params COMA parametro
Rule 55    lista_params -> parametro
Rule 56    parametro -> expresion
Rule 57    llamada_funcion -> ID PARIZQ lista_params PARDER
Rule 58    llamada_funcion -> ID PARIZQ PARDER
Rule 59    retorno_instruccion -> RRETURN expresion
Rule 60    decla_structN -> RSTRUCT ID lista_atributos
Rule 61    decla_structN -> RMUTABLE RSTRUCT ID lista_atributos
Rule 62    lista_atributos -> lista_atributos atributo
Rule 63    lista_atributos -> atributo
Rule 64    atributo -> ID DOSPTS DOSPTS TIPOVAL PTCOMA
Rule 65    atributo -> ID PTCOMA
Rule 66    modificar_struct -> ID PUNTO ID IGUAL expresion
Rule 67    expresion -> ID PUNTO ID
Rule 68    expresion -> expresion PUNTO ID
Rule 69    expresion -> expresion MAS expresion
Rule 70    expresion -> expresion MENOS expresion
Rule 71    expresion -> expresion POR expresion
Rule 72    expresion -> expresion DIV expresion
Rule 73    expresion -> expresion POT expresion
Rule 74    expresion -> expresion MOD expresion
Rule 75    expresion -> LOG10 PARIZQ expresion PARDER
Rule 76    expresion -> LOG PARIZQ expresion COMA expresion PARDER
Rule 77    expresion -> SENO PARIZQ expresion PARDER
Rule 78    expresion -> COSENO PARIZQ expresion PARDER
Rule 79    expresion -> TANG PARIZQ expresion PARDER
Rule 80    expresion -> RAIZ PARIZQ expresion PARDER
Rule 81    expresion -> MENOS expresion
Rule 82    expresion -> expresion OR expresion
Rule 83    expresion -> expresion AND expresion
Rule 84    expresion -> NOT expresion
Rule 85    expresion -> expresion MAYOR expresion
Rule 86    expresion -> expresion MAYORIGUAL expresion
Rule 87    expresion -> expresion MENOR expresion
Rule 88    expresion -> expresion MENORIGUAL expresion
Rule 89    expresion -> expresion IGUALDAD expresion
Rule 90    expresion -> expresion DIFERENTE expresion
Rule 91    expresion -> PARIZQ expresion PARDER
Rule 92    mas_lista -> CORIZQ expresion CORDER
Rule 93    mas_lista -> CORIZQ lista_expresion CORDER
Rule 94    lista_expresion -> lista_expresion COMA expresion
Rule 95    lista_expresion -> expresion
Rule 96    expresion -> ENTERO
Rule 97    expresion -> DECIMAL
Rule 98    expresion -> CADENA
Rule 99    expresion -> CARACTER
Rule 100   expresion -> RNULL
Rule 101   expresion -> RTRUE
Rule 102   expresion -> RFALSE
Rule 103   expresion -> RPARSE PARIZQ TIPOVAL COMA expresion PARDER
Rule 104   expresion -> RPARSE PARIZQ expresion PARDER
Rule 105   expresion -> RTRUNC PARIZQ expresion PARDER
Rule 106   expresion -> RFLOAT PARIZQ expresion PARDER
Rule 107   expresion -> RSTRING PARIZQ expresion PARDER
Rule 108   expresion -> RTYPEOF PARIZQ expresion PARDER
Rule 109   expresion -> RLOWER PARIZQ expresion PARDER
Rule 110   expresion -> RUPPER PARIZQ expresion PARDER
Rule 111   expresion -> ID
Rule 112   expresion -> ID conj_acceso
Rule 113   conj_acceso -> conj_acceso mas_lista
Rule 114   conj_acceso -> mas_lista
Rule 115   expresion -> mas_lista
Rule 116   expresion -> llamada_funcion
Rule 117   expresion -> RLENGTH PARIZQ expresion PARDER
Rule 118   expresion -> delete_valores

Terminals, with rules where they appear

AND                  : 83
CADENA               : 98
CARACTER             : 99
COMA                 : 35 36 54 76 94 103
CORDER               : 34 36 92 93
CORIZQ               : 34 36 92 93
COSENO               : 78
DECIMAL              : 97
DIFERENTE            : 90
DIV                  : 72
DOSPTS               : 25 25 49 64 64
ENTERO               : 96
EXCLA                : 35 36 37
ID                   : 25 26 33 34 35 36 37 38 39 40 48 49 52 53 57 58 60 61 64 65 66 66 67 67 68 111 112
IGUAL                : 25 26 34 38 40 66
IGUALDAD             : 89
LOG                  : 76
LOG10                : 75
MAS                  : 69
MAYOR                : 85
MAYORIGUAL           : 86
MENOR                : 87
MENORIGUAL           : 88
MENOS                : 70 81
MOD                  : 74
NOT                  : 84
OR                   : 82
PARDER               : 23 24 35 36 37 52 53 57 58 75 76 77 78 79 80 91 103 104 105 106 107 108 109 110 117
PARIZQ               : 23 24 35 36 37 52 53 57 58 75 76 77 78 79 80 91 103 104 105 106 107 108 109 110 117
POR                  : 71
POT                  : 73
PTCOMA               : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 64 65
PUNTO                : 66 67 68
RAIZ                 : 80
RBREAK               : 50
RCONTINUE            : 51
RELSE                : 43 46
RELSEIF              : 42 45
REND                 : 11 12 13 17 20
RFALSE               : 102
RFLOAT               : 106
RFOR                 : 48 49
RFUNCTION            : 52 53
RGLOBAL              : 39 40
RIF                  : 41 42 43
RIMPRIMIR            : 23
RIMPRIMIRLN          : 24
RIN                  : 48 49
RLENGTH              : 117
RLOWER               : 109
RMUTABLE             : 61
RNULL                : 100
RPARSE               : 103 104
RPOP                 : 37
RPUSH                : 35 36
RRETURN              : 59
RSTRING              : 107
RSTRUCT              : 60 61
RTRUE                : 101
RTRUNC               : 105
RTYPEOF              : 108
RUPPER               : 110
RWHILE               : 47
SENO                 : 77
TANG                 : 79
TIPBOOL              : 30
TIPCHAR              : 31
TIPDECIMAL           : 28
TIPENTERO            : 27
TIPNULL              : 29
TIPSTRING            : 32
error                : 22

Nonterminals, with rules where they appear

TIPOVAL              : 25 64 103
add_valores          : 8
asignacionLista      : 7
asignacionVars       : 6
atributo             : 62 63
break_instruccion    : 14
conj_acceso          : 38 112 113
continue_instruccion : 15
decla_structN        : 20
def_funcion          : 17
def_global_var       : 19
delete_valores       : 9 118
expresion            : 25 26 35 36 36 38 40 41 42 43 44 45 46 47 48 49 49 56 59 66 68 69 69 70 70 71 71 72 72 73 73 74 74 75 76 76 77 78 79 80 81 82 82 83 83 84 85 85 86 86 87 87 88 88 89 89 90 90 91 92 94 95 103 104 105 106 107 108 109 110 117
for_instruccion      : 13
if_instruccion       : 11 42 45
imprimirCompuesto    : 5
imprimirSimple       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 41 42 43 43 44 45 46 46 47 48 49 52 53
lista_atributos      : 60 61 62
lista_expresion      : 23 24 34 93 94
lista_params         : 52 54 57
llamada_funcion      : 18 116
mas_lista            : 113 114 115
modificar_lista      : 10
modificar_struct     : 21
parametro            : 54 55
retorno_instruccion  : 16
while_instruccion    : 12

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimirSimple PTCOMA
    (5) instruccion -> . imprimirCompuesto PTCOMA
    (6) instruccion -> . asignacionVars PTCOMA
    (7) instruccion -> . asignacionLista PTCOMA
    (8) instruccion -> . add_valores PTCOMA
    (9) instruccion -> . delete_valores PTCOMA
    (10) instruccion -> . modificar_lista PTCOMA
    (11) instruccion -> . if_instruccion REND PTCOMA
    (12) instruccion -> . while_instruccion REND PTCOMA
    (13) instruccion -> . for_instruccion REND PTCOMA
    (14) instruccion -> . break_instruccion PTCOMA
    (15) instruccion -> . continue_instruccion PTCOMA
    (16) instruccion -> . retorno_instruccion PTCOMA
    (17) instruccion -> . def_funcion REND PTCOMA
    (18) instruccion -> . llamada_funcion PTCOMA
    (19) instruccion -> . def_global_var PTCOMA
    (20) instruccion -> . decla_structN REND PTCOMA
    (21) instruccion -> . modificar_struct PTCOMA
    (22) instruccion -> . error PTCOMA
    (23) imprimirSimple -> . RIMPRIMIR PARIZQ lista_expresion PARDER
    (24) imprimirCompuesto -> . RIMPRIMIRLN PARIZQ lista_expresion PARDER
    (25) asignacionVars -> . ID IGUAL expresion DOSPTS DOSPTS TIPOVAL
    (26) asignacionVars -> . ID IGUAL expresion
    (34) asignacionLista -> . ID IGUAL CORIZQ lista_expresion CORDER
    (35) add_valores -> . RPUSH EXCLA PARIZQ ID COMA expresion PARDER
    (36) add_valores -> . RPUSH EXCLA PARIZQ ID CORIZQ expresion CORDER COMA expresion PARDER
    (37) delete_valores -> . RPOP EXCLA PARIZQ ID PARDER
    (38) modificar_lista -> . ID conj_acceso IGUAL expresion
    (41) if_instruccion -> . RIF expresion instrucciones
    (42) if_instruccion -> . RIF expresion instrucciones RELSEIF if_instruccion
    (43) if_instruccion -> . RIF expresion instrucciones RELSE instrucciones
    (44) if_instruccion -> . expresion instrucciones
    (45) if_instruccion -> . expresion instrucciones RELSEIF if_instruccion
    (46) if_instruccion -> . expresion instrucciones RELSE instrucciones
    (47) while_instruccion -> . RWHILE expresion instrucciones
    (48) for_instruccion -> . RFOR ID RIN expresion instrucciones
    (49) for_instruccion -> . RFOR ID RIN expresion DOSPTS expresion instrucciones
    (50) break_instruccion -> . RBREAK
    (51) continue_instruccion -> . RCONTINUE
    (59) retorno_instruccion -> . RRETURN expresion
    (52) def_funcion -> . RFUNCTION ID PARIZQ lista_params PARDER instrucciones
    (53) def_funcion -> . RFUNCTION ID PARIZQ PARDER instrucciones
    (57) llamada_funcion -> . ID PARIZQ lista_params PARDER
    (58) llamada_funcion -> . ID PARIZQ PARDER
    (39) def_global_var -> . RGLOBAL ID
    (40) def_global_var -> . RGLOBAL ID IGUAL expresion
    (60) decla_structN -> . RSTRUCT ID lista_atributos
    (61) decla_structN -> . RMUTABLE RSTRUCT ID lista_atributos
    (66) modificar_struct -> . ID PUNTO ID IGUAL expresion
    (67) expresion -> . ID PUNTO ID
    (68) expresion -> . expresion PUNTO ID
    (69) expresion -> . expresion MAS expresion
    (70) expresion -> . expresion MENOS expresion
    (71) expresion -> . expresion POR expresion
    (72) expresion -> . expresion DIV expresion
    (73) expresion -> . expresion POT expresion
    (74) expresion -> . expresion MOD expresion
    (75) expresion -> . LOG10 PARIZQ expresion PARDER
    (76) expresion -> . LOG PARIZQ expresion COMA expresion PARDER
    (77) expresion -> . SENO PARIZQ expresion PARDER
    (78) expresion -> . COSENO PARIZQ expresion PARDER
    (79) expresion -> . TANG PARIZQ expresion PARDER
    (80) expresion -> . RAIZ PARIZQ expresion PARDER
    (81) expresion -> . MENOS expresion
    (82) expresion -> . expresion OR expresion
    (83) expresion -> . expresion AND expresion
    (84) expresion -> . NOT expresion
    (85) expresion -> . expresion MAYOR expresion
    (86) expresion -> . expresion MAYORIGUAL expresion
    (87) expresion -> . expresion MENOR expresion
    (88) expresion -> . expresion MENORIGUAL expresion
    (89) expresion -> . expresion IGUALDAD expresion
    (90) expresion -> . expresion DIFERENTE expresion
    (91) expresion -> . PARIZQ expresion PARDER
    (96) expresion -> . ENTERO
    (97) expresion -> . DECIMAL
    (98) expresion -> . CADENA
    (99) expresion -> . CARACTER
    (100) expresion -> . RNULL
    (101) expresion -> . RTRUE
    (102) expresion -> . RFALSE
    (103) expresion -> . RPARSE PARIZQ TIPOVAL COMA expresion PARDER
    (104) expresion -> . RPARSE PARIZQ expresion PARDER
    (105) expresion -> . RTRUNC PARIZQ expresion PARDER
    (106) expresion -> . RFLOAT PARIZQ expresion PARDER
    (107) expresion -> . RSTRING PARIZQ expresion PARDER
    (108) expresion -> . RTYPEOF PARIZQ expresion PARDER
    (109) expresion -> . RLOWER PARIZQ expresion PARDER
    (110) expresion -> . RUPPER PARIZQ expresion PARDER
    (111) expresion -> . ID
    (112) expresion -> . ID conj_acceso
    (115) expresion -> . mas_lista
    (116) expresion -> . llamada_funcion
    (117) expresion -> . RLENGTH PARIZQ expresion PARDER
    (118) expresion -> . delete_valores
    (92) mas_lista -> . CORIZQ expresion CORDER
    (93) mas_lista -> . CORIZQ lista_expresion CORDER

    error           shift and go to state 22
    RIMPRIMIR       shift and go to state 23
    RIMPRIMIRLN     shift and go to state 25
    ID              shift and go to state 26
    RPUSH           shift and go to state 29
    RPOP            shift and go to state 30
    RIF             shift and go to state 31
    RWHILE          shift and go to state 32
    RFOR            shift and go to state 33
    RBREAK          shift and go to state 34
    RCONTINUE       shift and go to state 35
    RRETURN         shift and go to state 36
    RFUNCTION       shift and go to state 37
    RGLOBAL         shift and go to state 38
    RSTRUCT         shift and go to state 39
    RMUTABLE        shift and go to state 40
    LOG10           shift and go to state 42
    LOG             shift and go to state 43
    SENO            shift and go to state 44
    COSENO          shift and go to state 45
    TANG            shift and go to state 46
    RAIZ            shift and go to state 47
    MENOS           shift and go to state 41
    NOT             shift and go to state 48
    PARIZQ          shift and go to state 24
    ENTERO          shift and go to state 49
    DECIMAL         shift and go to state 50
    CADENA          shift and go to state 51
    CARACTER        shift and go to state 52
    RNULL           shift and go to state 53
    RTRUE           shift and go to state 54
    RFALSE          shift and go to state 55
    RPARSE          shift and go to state 56
    RTRUNC          shift and go to state 57
    RFLOAT          shift and go to state 58
    RSTRING         shift and go to state 59
    RTYPEOF         shift and go to state 60
    RLOWER          shift and go to state 61
    RUPPER          shift and go to state 62
    RLENGTH         shift and go to state 64
    CORIZQ          shift and go to state 28

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimirSimple                 shift and go to state 4
    imprimirCompuesto              shift and go to state 5
    asignacionVars                 shift and go to state 6
    asignacionLista                shift and go to state 7
    add_valores                    shift and go to state 8
    delete_valores                 shift and go to state 9
    modificar_lista                shift and go to state 10
    if_instruccion                 shift and go to state 11
    while_instruccion              shift and go to state 12
    for_instruccion                shift and go to state 13
    break_instruccion              shift and go to state 14
    continue_instruccion           shift and go to state 15
    retorno_instruccion            shift and go to state 16
    def_funcion                    shift and go to state 17
    llamada_funcion                shift and go to state 18
    def_global_var                 shift and go to state 19
    decla_structN                  shift and go to state 20
    modificar_struct               shift and go to state 21
    expresion                      shift and go to state 27
    mas_lista                      shift and go to state 63

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimirSimple PTCOMA
    (5) instruccion -> . imprimirCompuesto PTCOMA
    (6) instruccion -> . asignacionVars PTCOMA
    (7) instruccion -> . asignacionLista PTCOMA
    (8) instruccion -> . add_valores PTCOMA
    (9) instruccion -> . delete_valores PTCOMA
    (10) instruccion -> . modificar_lista PTCOMA
    (11) instruccion -> . if_instruccion REND PTCOMA
    (12) instruccion -> . while_instruccion REND PTCOMA
    (13) instruccion -> . for_instruccion REND PTCOMA
    (14) instruccion -> . break_instruccion PTCOMA
    (15) instruccion -> . continue_instruccion PTCOMA
    (16) instruccion -> . retorno_instruccion PTCOMA
    (17) instruccion -> . def_funcion REND PTCOMA
    (18) instruccion -> . llamada_funcion PTCOMA
    (19) instruccion -> . def_global_var PTCOMA
    (20) instruccion -> . decla_structN REND PTCOMA
    (21) instruccion -> . modificar_struct PTCOMA
    (22) instruccion -> . error PTCOMA
    (23) imprimirSimple -> . RIMPRIMIR PARIZQ lista_expresion PARDER
    (24) imprimirCompuesto -> . RIMPRIMIRLN PARIZQ lista_expresion PARDER
    (25) asignacionVars -> . ID IGUAL expresion DOSPTS DOSPTS TIPOVAL
    (26) asignacionVars -> . ID IGUAL expresion
    (34) asignacionLista -> . ID IGUAL CORIZQ lista_expresion CORDER
    (35) add_valores -> . RPUSH EXCLA PARIZQ ID COMA expresion PARDER
    (36) add_valores -> . RPUSH EXCLA PARIZQ ID CORIZQ expresion CORDER COMA expresion PARDER
    (37) delete_valores -> . RPOP EXCLA PARIZQ ID PARDER
    (38) modificar_lista -> . ID conj_acceso IGUAL expresion
    (41) if_instruccion -> . RIF expresion instrucciones
    (42) if_instruccion -> . RIF expresion instrucciones RELSEIF if_instruccion
    (43) if_instruccion -> . RIF expresion instrucciones RELSE instrucciones
    (44) if_instruccion -> . expresion instrucciones
    (45) if_instruccion -> . expresion instrucciones RELSEIF if_instruccion
    (46) if_instruccion -> . expresion instrucciones RELSE instrucciones
    (47) while_instruccion -> . RWHILE expresion instrucciones
    (48) for_instruccion -> . RFOR ID RIN expresion instrucciones
    (49) for_instruccion -> . RFOR ID RIN expresion DOSPTS expresion instrucciones
    (50) break_instruccion -> . RBREAK
    (51) continue_instruccion -> . RCONTINUE
    (59) retorno_instruccion -> . RRETURN expresion
    (52) def_funcion -> . RFUNCTION ID PARIZQ lista_params PARDER instrucciones
    (53) def_funcion -> . RFUNCTION ID PARIZQ PARDER instrucciones
    (57) llamada_funcion -> . ID PARIZQ lista_params PARDER
    (58) llamada_funcion -> . ID PARIZQ PARDER
    (39) def_global_var -> . RGLOBAL ID
    (40) def_global_var -> . RGLOBAL ID IGUAL expresion
    (60) decla_structN -> . RSTRUCT ID lista_atributos
    (61) decla_structN -> . RMUTABLE RSTRUCT ID lista_atributos
    (66) modificar_struct -> . ID PUNTO ID IGUAL expresion
    (67) expresion -> . ID PUNTO ID
    (68) expresion -> . expresion PUNTO ID
    (69) expresion -> . expresion MAS expresion
    (70) expresion -> . expresion MENOS expresion
    (71) expresion -> . expresion POR expresion
    (72) expresion -> . expresion DIV expresion
    (73) expresion -> . expresion POT expresion
    (74) expresion -> . expresion MOD expresion
    (75) expresion -> . LOG10 PARIZQ expresion PARDER
    (76) expresion -> . LOG PARIZQ expresion COMA expresion PARDER
    (77) expresion -> . SENO PARIZQ expresion PARDER
    (78) expresion -> . COSENO PARIZQ expresion PARDER
    (79) expresion -> . TANG PARIZQ expresion PARDER
    (80) expresion -> . RAIZ PARIZQ expresion PARDER
    (81) expresion -> . MENOS expresion
    (82) expresion -> . expresion OR expresion
    (83) expresion -> . expresion AND expresion
    (84) expresion -> . NOT expresion
    (85) expresion -> . expresion MAYOR expresion
    (86) expresion -> . expresion MAYORIGUAL expresion
    (87) expresion -> . expresion MENOR expresion
    (88) expresion -> . expresion MENORIGUAL expresion
    (89) expresion -> . expresion IGUALDAD expresion
    (90) expresion -> . expresion DIFERENTE expresion
    (91) expresion -> . PARIZQ expresion PARDER
    (96) expresion -> . ENTERO
    (97) expresion -> . DECIMAL
    (98) expresion -> . CADENA
    (99) expresion -> . CARACTER
    (100) expresion -> . RNULL
    (101) expresion -> . RTRUE
    (102) expresion -> . RFALSE
    (103) expresion -> . RPARSE PARIZQ TIPOVAL COMA expresion PARDER
    (104) expresion -> . RPARSE PARIZQ expresion PARDER
    (105) expresion -> . RTRUNC PARIZQ expresion PARDER
    (106) expresion -> . RFLOAT PARIZQ expresion PARDER
    (107) expresion -> . RSTRING PARIZQ expresion PARDER
    (108) expresion -> . RTYPEOF PARIZQ expresion PARDER
    (109) expresion -> . RLOWER PARIZQ expresion PARDER
    (110) expresion -> . RUPPER PARIZQ expresion PARDER
    (111) expresion -> . ID
    (112) expresion -> . ID conj_acceso
    (115) expresion -> . mas_lista
    (116) expresion -> . llamada_funcion
    (117) expresion -> . RLENGTH PARIZQ expresion PARDER
    (118) expresion -> . delete_valores
    (92) mas_lista -> . CORIZQ expresion CORDER
    (93) mas_lista -> . CORIZQ lista_expresion CORDER

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 22
    RIMPRIMIR       shift and go to state 23
    RIMPRIMIRLN     shift and go to state 25
    ID              shift and go to state 26
    RPUSH           shift and go to state 29
    RPOP            shift and go to state 30
    RIF             shift and go to state 31
    RWHILE          shift and go to state 32
    RFOR            shift and go to state 33
    RBREAK          shift and go to state 34
    RCONTINUE       shift and go to state 35
    RRETURN         shift and go to state 36
    RFUNCTION       shift and go to state 37
    RGLOBAL         shift and go to state 38
    RSTRUCT         shift and go to state 39
    RMUTABLE        shift and go to state 40
    LOG10           shift and go to state 42
    LOG             shift and go to state 43
    SENO            shift and go to state 44
    COSENO          shift and go to state 45
    TANG            shift and go to state 46
    RAIZ            shift and go to state 47
    MENOS           shift and go to state 41
    NOT             shift and go to state 48
    PARIZQ          shift and go to state 24
    ENTERO          shift and go to state 49
    DECIMAL         shift and go to state 50
    CADENA          shift and go to state 51
    CARACTER        shift and go to state 52
    RNULL           shift and go to state 53
    RTRUE           shift and go to state 54
    RFALSE          shift and go to state 55
    RPARSE          shift and go to state 56
    RTRUNC          shift and go to state 57
    RFLOAT          shift and go to state 58
    RSTRING         shift and go to state 59
    RTYPEOF         shift and go to state 60
    RLOWER          shift and go to state 61
    RUPPER          shift and go to state 62
    RLENGTH         shift and go to state 64
    CORIZQ          shift and go to state 28

    instruccion                    shift and go to state 65
    imprimirSimple                 shift and go to state 4
    imprimirCompuesto              shift and go to state 5
    asignacionVars                 shift and go to state 6
    asignacionLista                shift and go to state 7
    add_valores                    shift and go to state 8
    delete_valores                 shift and go to state 9
    modificar_lista                shift and go to state 10
    if_instruccion                 shift and go to state 11
    while_instruccion              shift and go to state 12
    for_instruccion                shift and go to state 13
    break_instruccion              shift and go to state 14
    continue_instruccion           shift and go to state 15
    retorno_instruccion            shift and go to state 16
    def_funcion                    shift and go to state 17
    llamada_funcion                shift and go to state 18
    def_global_var                 shift and go to state 19
    decla_structN                  shift and go to state 20
    modificar_struct               shift and go to state 21
    expresion                      shift and go to state 27
    mas_lista                      shift and go to state 63

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RIMPRIMIR       reduce using rule 3 (instrucciones -> instruccion .)
    RIMPRIMIRLN     reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RPUSH           reduce using rule 3 (instrucciones -> instruccion .)
    RPOP            reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    RGLOBAL         reduce using rule 3 (instrucciones -> instruccion .)
    RSTRUCT         reduce using rule 3 (instrucciones -> instruccion .)
    RMUTABLE        reduce using rule 3 (instrucciones -> instruccion .)
    LOG10           reduce using rule 3 (instrucciones -> instruccion .)
    LOG             reduce using rule 3 (instrucciones -> instruccion .)
    SENO            reduce using rule 3 (instrucciones -> instruccion .)
    COSENO          reduce using rule 3 (instrucciones -> instruccion .)
    TANG            reduce using rule 3 (instrucciones -> instruccion .)
    RAIZ            reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 3 (instrucciones -> instruccion .)
    RNULL           reduce using rule 3 (instrucciones -> instruccion .)
    RTRUE           reduce using rule 3 (instrucciones -> instruccion .)
    RFALSE          reduce using rule 3 (instrucciones -> instruccion .)
    RPARSE          reduce using rule 3 (instrucciones -> instruccion .)
    RTRUNC          reduce using rule 3 (instrucciones -> instruccion .)
    RFLOAT          reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RTYPEOF         reduce using rule 3 (instrucciones -> instruccion .)
    RLOWER          reduce using rule 3 (instrucciones -> instruccion .)
    RUPPER          reduce using rule 3 (instrucciones -> instruccion .)
    RLENGTH         reduce using rule 3 (instrucciones -> instruccion .)
    CORIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    RELSEIF         reduce using rule 3 (instrucciones -> instruccion .)
    RELSE           reduce using rule 3 (instrucciones -> instruccion .)
    REND            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimirSimple . PTCOMA

    PTCOMA          shift and go to state 66


state 5

    (5) instruccion -> imprimirCompuesto . PTCOMA

    PTCOMA          shift and go to state 67


state 6

    (6) instruccion -> asignacionVars . PTCOMA

    PTCOMA          shift and go to state 68


state 7

    (7) instruccion -> asignacionLista . PTCOMA

    PTCOMA          shift and go to state 69


state 8

    (8) instruccion -> add_valores . PTCOMA

    PTCOMA          shift and go to state 70


state 9

    (9) instruccion -> delete_valores . PTCOMA
    (118) expresion -> delete_valores .
